--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div class="header">
+    <header class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
       <div>
         <ul>
@@ -24,14 +24,14 @@
           </li>
         </ul>
       </div>
-    </div>
+    </header>
     <div class="hero"></div>
-    <div class="content">
+    <section class="content">
       <div class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
-          alt="Worksspace with SEO graphic organizer"
+          alt="Image of workspace with SEO graphic organizer"
         />
         <h2>Search Engine Optimization</h2>
         <p>
@@ -73,8 +73,8 @@
           your lead generation.
         </p>
       </div>
-    </div>
-    <div class="benefits">
+    </section>
+    <section class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img
@@ -108,10 +108,10 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
-    </div>
-    <div class="footer">
+    </section>
+    <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2023 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
